--- a/frontend/assets/css/login.css
+++ b/frontend/assets/css/login.css
@@ -18,7 +18,7 @@
   z-index: -1;
 }
 
-.content-wrapper {
+.content-login-wrapper {
   position: relative;
   width: 100%;
   height: 100%;
